add item image list and recommend flag
