# docs/swagger.json
@@ -362,8 +362,14 @@
                 "id": {
                     "type": "integer"
                 },
-                "image": {
-                    "type": "string"
+                "images": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "is_recommended": {
+                    "type": "boolean"
                 },
                 "item_variants": {
                     "type": "array",
